fix - when .lead-banner title is long it wraps

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article.sass
@@ -65,12 +65,12 @@
 .swiper-button-next-article
     color: #FFFFFF
     font-size: 2px
-    width: 60px
+    width: 70px
     height: 60px
-    background-color: #000000B3
+    background-color: yellow
     opacity: 1
-    bottom: 248px
-    right: 500px
+    bottom: 218px
+    right: 0
     position: relative
     z-index: 10
 .swiper-pagination-article
